crates/nash-can/tests/snapshots/impls__impl_missing_required_method.snap
---
source: crates/nash-can/tests/impls.rs
expression: result.unwrap_err()
---
[
    MissingMethod {
        region: Region {
            start: Position {
                line: 5,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 15,
            },
        },
        trait_: "Keep",
        name: "other",
    },
]
