crates/nash-can/tests/snapshots/impls__impl_overapplied_heads_report_kind_arity.snap
---
source: crates/nash-can/tests/impls.rs
expression: errors
---
[
    [
        KindTooManyArgs {
            region: Region {
                start: Position {
                    line: 5,
                    column: 12,
                },
                end: Position {
                    line: 5,
                    column: 22,
                },
            },
            head: Named(
                QualifiedName {
                    home: ModuleName {
                        package: Some(
                            PackageName {
                                author: "nash",
                                project: "core",
                            },
                        ),
                        name: "Builtin",
                    },
                    name: "list",
                },
            ),
            applied: 2,
            accepted: 1,
        },
    ],
    [
        KindTooManyArgs {
            region: Region {
                start: Position {
                    line: 5,
                    column: 12,
                },
                end: Position {
                    line: 5,
                    column: 27,
                },
            },
            head: Named(
                QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "listAlias",
                },
            ),
            applied: 2,
            accepted: 1,
        },
    ],
]
