crates/nash-can/tests/snapshots/impls__impl_rejects_repeated_variables_across_heads.snap
---
source: crates/nash-can/tests/impls.rs
expression: result.unwrap_err()
---
[
    RepeatedHeadVar {
        name: "a",
        first: Region {
            start: Position {
                line: 4,
                column: 20,
            },
            end: Position {
                line: 4,
                column: 22,
            },
        },
        second: Region {
            start: Position {
                line: 4,
                column: 30,
            },
            end: Position {
                line: 4,
                column: 32,
            },
        },
    },
]
