crates/nash-can/tests/snapshots/impls__impl_unknown_method_precedes_missing_method.snap
---
source: crates/nash-can/tests/impls.rs
description: "module Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep (List 'a) where\n    typo x = x\n"
info: diagnostic
---
nash::names::unknown_method

  × The `Keep` trait has no `typo` method:
   ╭─[src/Main.nash:5:5]
 4 │ impl Keep (List 'a) where
 5 │     typo x = x
   ·     ────
   ╰────
  help: Remove or rename this method to match the trait declaration.
