crates/nash-can/tests/snapshots/impls__owned_blanket_impls_preserve_bounds_and_overlap.snap
---
source: crates/nash-can/tests/impls.rs
description: "module Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep ('a : Big) where\n    keep x = x\n\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep ('a : Big) where\n    keep x = x\nimpl Keep () where\n    keep x = x\n"
info: diagnostic
---
Case 1: accepted
nash::names::overlapping_impls

  × These `Main.Keep` impls can both match the same trait arguments. The overlapping
  │ head is Primitive.unit:
   ╭─[src/Main.nash:6:1]
 3 │         keep : 'a -> 'a
 4 │ ╭─▶ impl Keep ('a : Big) where
 5 │ ├─▶     keep x = x
   · ╰──── first impl in `Main`
 6 │ ╭─▶ impl Keep () where
 7 │ ├─▶     keep x = x
   · ╰──── overlapping impl in `Main`
   ╰────
  help: Remove one impl or make their heads disjoint; context constraints do not
        disambiguate heads.
